--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <hr>
             <div class="info">
                 <p><a href="https://youtu.be/Qe1JT_oeIbo?si=D4GcULieXcdmlTSI" target="_blank">การสำรองข้อมูลบน NAS</a> ช่วยให้ผู้ใช้สามารถปกป้องข้อมูลสำคัญได้อย่างมีประสิทธิภาพ โดย NAS มีฟีเจอร์ในการตั้งค่าการสำรองข้อมูลอัตโนมัติ การเก็บเวอร์ชันของไฟล์ และการเข้าถึงข้อมูลสำรองจากระยะไกล ช่วยลดความเสี่ยงจากการสูญหายข้อมูลในกรณีที่เกิดความเสียหายทางกายภาพ ข้อผิดพลาดของระบบ หรือเหตุการณ์ไม่คาดคิด นอกจากนี้ NAS ยังรองรับการสำรองข้อมูลจากอุปกรณ์หลากหลาย เช่น คอมพิวเตอร์ โทรศัพท์มือถือ และเซิร์ฟเวอร์ ทำให้สามารถจัดเก็บข้อมูลได้ในศูนย์กลางเดียว เข้าถึงและกู้คืนได้สะดวก เพิ่มความมั่นใจและความปลอดภัยให้กับผู้ใช้งานทั้งในบ้านและในธุรกิจ</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/mpxBmxj5mP0?si=bQco6ULRI3g7PJ22" title="YouTube video player" frameborder="0"  allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mpxBmxj5mP0?si=bQco6ULRI3g7PJ22" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
 
@@ -98,7 +98,7 @@
                         <li>เหมาะสำหรับ: ผู้ที่ต้องการทั้งความเร็วและความปลอดภัยในระดับสูง</li>
                     </ul>
                 </div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/U-OCdTeZLac?si=ULOocWkkVyxQa6Gc" title="YouTube video player" frameborder="0"  allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/U-OCdTeZLac?si=ULOocWkkVyxQa6Gc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
 
