--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
 
     <footer>
-        <p>This website made by Mr.Nattawat.</p>
+        <p>This website made by <a href="https://github.com/BossNattawat" target="_blank">BossNattawat</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
