--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="logo">
             <h1><a href="/">NAS</a></h1>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a href="javascript:void(0);" class="icon" onclick="nav()">
                 <i class="fa fa-bars"></i>
             </a>    
         </div>
